[FIX] website_sale: wrap unbreakable product name in td
91937764 added new selector to target other location where product name
could break the interface on short screen or with long unbreakable word
in title.

But there is some use case missing where overflow-wrap doesn't work and
word-wrap doesn't. Also adding overflow-wrap since word-wrap is
deprecated.

opw-2451496

X-original-commit: e3eb5bf450158b5cba26bd6355e595f0d97fa000

--- a/addons/website_sale/static/src/scss/website_sale.scss
+++ b/addons/website_sale/static/src/scss/website_sale.scss
@@ -36,7 +36,9 @@ $o-wsale-products-layout-grid-gutter-width: min($grid-gutter-width / 2, $o-wsale
     }
 
     h1[itemprop="name"], .td-product_name {
+        word-break: break-word;
         word-wrap: break-word;
+        overflow-wrap: break-word;
     }
 
     @include media-breakpoint-down(sm) {
